docs: :memo: add docs for update and delete methods
