# internal/dto/dto.go
@@ -5,6 +5,11 @@ type CreateProductInput struct {
 	Price int    `json:"price"`
 }
 
+type UpdateProductInput struct {
+	Name  string `json:"name"`
+	Price int    `json:"price"`
+}
+
 type CreateUserInput struct {
 	Name     string `json:"name"`
 	Email    string `json:"email"`
